[project]
name = "metakit"
version = "0.1.0"
description = "A powerful Python library for processing metadata of images, videos, and audio files"
authors = [{ name = "Hmily" }]
license = {text = "MIT"}
readme = "README.md"
url='https://github.com/ihmily/metakit'
keywords = ["image", "metadata", "exif", "watermark", "video", "audio"]
requires-python = ">=3.10,<4.0"

dependencies = [
    "Pillow>=9.5.0",
    "pyexiv2>=2.15.4"
]

[project.urls]
Documentation = "https://metakit.readthedocs.io"
Homepage = "https://github.com/ihmily/metakit"
Source = "https://github.com/ihmily/metakit"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
metakit = "metakit.cli:main"